--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,13 +17,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:url"           content="https://sounder-app.herokuapp.com/" />
+  <meta property="og:url"           content="https://hotify.herokuapp.com/" />
   <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="Sounder-app" />
+  <meta property="og:title"         content="Hotify" />
   <meta property="og:description"   content="Discover new Songs" />
   <meta property="og:image"         content="https://sounder-app.herokuapp.com/images/facebook-cover.png" />
 
-  <title>Sounder-App</title>
+  <title>Hotify</title>
 </head>
 <body>
   {{{ body }}}
